--- a/.gitignore
+++ b/.gitignore
@@ -87,7 +87,7 @@ anaconda-mode/
 # these rules might exclude image files for figures etc.
 *.ps
 *.eps
-*.pdf
+# *.pdf
 
 ## Generated if empty string is given at "Please type another file name for output:"
 .pdf
